--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -9,13 +9,16 @@
 		padding-left: 0;
 
 		ul {
+			display: grid;
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 			float: left;
 			position: absolute;
 			top: 100%;
 			left: -999em;
 			z-index: 99999;
-
+			width: auto;
+			height: auto;
+			background-color: white;
 			ul {
 				left: -999em;
 				top: 0;
@@ -74,11 +77,23 @@
 .main-navigation.toggled ul {
 	display: block;
 }
-
+	// ul:hover{
+	// 	display:block;
+	// }
+	// .sub-menu li{
+	// 	display:block;
+	// }
+	button{
+		margin: 0 auto;
+	}
 @media screen and (min-width: 37.5em) {
 
 	.menu-toggle {
 		display: none;
+	}
+
+	.main-navigation a{
+		display: block;
 	}
 
 	.main-navigation.toggled ul,
@@ -93,6 +108,12 @@
 	
 	ul{
 		display:none;
+	}
+	.sub-menu{
+		display: grid;
+	}
+	.sub-menu li{
+		//display:block;
 	}
 }
 
