--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -78,6 +78,9 @@
 	display: block;
 }
 
+$largeur-burger : 2rem;
+$duree : .10s;
+$epaisseur : 8%;
 
 	// ul:hover{
 	// 	display:block;
@@ -88,7 +91,126 @@
 	// button{
 	// 	margin: 0 auto;
 	// }
+
+
+	#burger {
+		position : relative;
+		width:$largeur-burger ;
+		height : $largeur-burger ;
+		// border : 1px solid #aaa;
+		//border-radius : 50%;
+		overflow: hidden;
+		background: none;
+		border:none;
+	
+		div{
+			top: 0;
+			left : 0;
+			position:absolute;
+			width : 100%;
+			height : 100%;
+		
+			&:nth-of-type(1){
+				background-color: black;
+				clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
+			}
+			&:nth-of-type(2){
+				background-color: black;
+				clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
+			}
+			&:nth-of-type(3){
+				background-color: black;
+				clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
+			}
+		}
+	}
+
+	@keyframes ouvreX1{
+		0%{
+			clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
+		}
+		100%{
+			clip-path: polygon($epaisseur  (-$epaisseur),  100%+$epaisseur 100%-$epaisseur ,100%-$epaisseur 100%+$epaisseur, -$epaisseur $epaisseur);
+		}
+	}
+	@keyframes fermeX1{
+		0%{
+			clip-path: polygon($epaisseur  (-$epaisseur),  100%+$epaisseur 100%-$epaisseur ,100%-$epaisseur 100%+$epaisseur, -$epaisseur $epaisseur);
+		}
+		100%{
+			 clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
+		}
+	}
+	
+	.ouvreX1 {
+		animation : ouvreX1 $duree both;
+	}
+	
+	.fermeX1 {
+		animation : fermeX1 $duree both;
+	}
+	
+	/* -----------------------------------------------------------------------------------
+	La barre du bas
+	-------------------------------------------------------------------------------------- */
+	@keyframes ouvreX3{
+		0%{
+			clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
+		}
+		100%{
+			clip-path: polygon( (-$epaisseur)  100%-$epaisseur,  100%-$epaisseur (-$epaisseur) , 100%+$epaisseur $epaisseur, $epaisseur 100%+$epaisseur);
+		}
+	}
+	@keyframes fermeX3{
+		0%{
+			clip-path: polygon(-4%  96%,  96% -4% , 104% 4%, 4% 104%);
+		}
+		100%{
+			clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
+		}
+	}
+	
+	.ouvreX3 {
+		animation : ouvreX3 $duree both;
+	}
+	
+	.fermeX3 {
+		animation : fermeX3 $duree both;
+	}
+	
+	/* -----------------------------------------------------------------------------------
+	La barre du millieu
+	-------------------------------------------------------------------------------------- */
+	@keyframes ouvreX2{
+		0%{
+			clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
+		}
+		100%{
+			clip-path: polygon(48%  48%,  52% 48% , 52% 52%, 48% 52%);
+		}
+	}
+	@keyframes fermeX2{
+		0%{
+			clip-path: polygon(48%  48%,  52% 48% , 52% 52%, 48% 52%);
+		}
+		100%{
+			clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
+		}
+	}
+	
+	.ouvreX2 {
+		animation : ouvreX2 $duree both;
+	}
+	
+	.fermeX2 {
+		animation : fermeX2 $duree both;
+	}
+
 @media screen and (min-width: 37.5em) {
+
+	#burger{
+		display: none;
+	}
 
 	.menu-toggle {
 		display: none;
