--- a/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
@@ -1,6 +1,6 @@
 .carrousel{
     display: flex;
-    width: 300vw;
+    width: 500vw;
     height: 20vh;
     transition: transform .5s;
 
@@ -18,6 +18,12 @@
         } &:nth-of-type(3){
             background-color: rgb(67, 90, 190);            
 
+        }&:nth-of-type(4){
+            background-color: rgb(255, 0, 157);            
+
+        }&:nth-of-type(5){
+            background-color: rgb(229, 255, 0);            
+
         }
     }
 }
@@ -33,7 +39,13 @@
     animation: trois 1s both;
     animation-delay: 1s;
 }
-
+#quatre{
+    animation: quatre 1s both;
+    animation-delay: 1.5s;
+}#cinq{
+    animation: cinq 1s both;
+    animation-delay: 2s;
+}
 @keyframes un{
 0%{
     transform: translateX(-1000px);
@@ -55,3 +67,17 @@
             transform: translateX(0px);
         }
         }
+        @keyframes quatre{
+            0%{
+                transform: translateX(-1000px);
+            }100%{
+                transform: translateX(0px);
+            }
+            }
+            @keyframes cinq{
+                0%{
+                    transform: translateX(-1000px);
+                }100%{
+                    transform: translateX(0px);
+                }
+                }
