Changement des décorations des liens et de la taille des liens du carrousel

--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -71,6 +71,10 @@
 	.current-menu-ancestor > a {
 	}
 }
+//Enlèvement de la décoration des liens
+a{
+	text-decoration: none;
+}
 
 /* Small menu. */
 .menu-toggle,
