--- a/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
@@ -25,6 +25,10 @@
             background-color: rgb(229, 255, 0);            
 
         }
+        //Changement de la taille des polices
+        a{
+            font-size:xx-large;
+        }
     }
 }
 //Animation des boutons
