--- a/wp-content/themes/theme-tp1 copie/style.css
+++ b/wp-content/themes/theme-tp1 copie/style.css
@@ -838,6 +838,10 @@ a {
   .sub-menu {
     display: grid;
   }
+  h1 {
+    font-size: clamp(3vw, 4.5vw, 5vw);
+    text-align: center;
+  }
 }
 
 .site-main .comment-navigation, .site-main
