--- a/wp-content/themes/theme-tp1 copie/style.css
+++ b/wp-content/themes/theme-tp1 copie/style.css
@@ -649,7 +649,7 @@ textarea {
   z-index: 99999;
   width: auto;
   height: auto;
-  background-color: white;
+  background-color: darkblue;
 }
 
 .main-navigation ul ul ul {
@@ -821,6 +821,7 @@ a {
   }
   .main-navigation a {
     display: block;
+    color: white;
   }
   .main-navigation.toggled ul,
   .main-navigation ul {
@@ -838,9 +839,15 @@ a {
   .sub-menu {
     display: grid;
   }
-  h1 {
-    font-size: clamp(3vw, 4.5vw, 5vw);
+  .site-branding {
+    font-size: clamp(1vw, 2.5vw, 3vw);
     text-align: center;
+  }
+  nav {
+    background-color: darkblue;
+  }
+  nav a {
+    color: white;
   }
 }
 
@@ -1124,32 +1131,37 @@ a {
   background-color: #e5ff00;
 }
 
+.carrousel div:nth-of-type(5) a {
+  color: black;
+}
+
 .carrousel div a {
   font-size: xx-large;
+  color: white;
 }
 
 #un {
-  animation: un 1s both;
+  animation: un 0.5s both;
 }
 
 #deux {
-  animation: deux 1s both;
-  animation-delay: 0.5s;
+  animation: deux 0.5s both;
+  animation-delay: 0.25s;
 }
 
 #trois {
-  animation: trois 1s both;
-  animation-delay: 1s;
+  animation: trois 0.5s both;
+  animation-delay: 0.5s;
 }
 
 #quatre {
-  animation: quatre 1s both;
-  animation-delay: 1.5s;
+  animation: quatre 0.5s both;
+  animation-delay: 0.75s;
 }
 
 #cinq {
-  animation: cinq 1s both;
-  animation-delay: 2s;
+  animation: cinq 0.5s both;
+  animation-delay: 1s;
 }
 
 @keyframes un {
