--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -1,3 +1,5 @@
+//Ajout des menus
+
 .main-navigation {
 	display: block;
 	width: 100%;
@@ -9,6 +11,7 @@
 		padding-left: 0;
 
 		ul {
+			//Disposition
 			display: grid;
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 			float: left;
@@ -18,6 +21,7 @@
 			z-index: 99999;
 			width: auto;
 			height: auto;
+			//Arrière-plan
 			background-color: darkblue;
 			ul {
 				left: -999em;
@@ -25,6 +29,8 @@
 			}
 
 			li {
+				//Séparateurs
+				border-bottom: 1px solid white;
 
 				&:hover > ul,
 				&.focus > ul {
@@ -62,6 +68,7 @@
 
 	a {
 		display: block;
+		//Changement du style du texte des liens
 		text-decoration: none;
 	}
 
@@ -82,19 +89,18 @@ a{
 	display: block;
 }
 
+//Couleur du texte du menu
+nav{
+	a{
+		color: white;
+	}
+}
+
+//Bouton burger
 $largeur-burger : 2rem;
 $duree : .10s;
 $epaisseur : 8%;
 
-	// ul:hover{
-	// 	display:block;
-	// }
-	// .sub-menu li{
-	// 	display:block;
-	// }
-	// button{
-	// 	margin: 0 auto;
-	// }
 
 
 	#burger {
@@ -128,6 +134,7 @@ $epaisseur : 8%;
 			}
 		}
 	}
+
 
 	@keyframes ouvreX1{
 		0%{
@@ -211,7 +218,7 @@ $epaisseur : 8%;
 	}
 
 @media screen and (min-width: 37.5em) {
-
+//Cacher le bouton burger
 	#burger{
 		display: none;
 	}
@@ -219,18 +226,18 @@ $epaisseur : 8%;
 	.menu-toggle {
 		display: none;
 	}
-
+//Taille des sous-menus
 	li:hover ul{
 		display: block;
 		width: auto;
 		height: auto;
 	}
-
+//Disposition de la navigation
 	.main-navigation a{
 		display: block;
 		color: white;
 	}
-
+//Alignement des liens
 	.main-navigation.toggled ul,
 	.main-navigation ul {
 		display: flex;
@@ -241,6 +248,7 @@ $epaisseur : 8%;
 		width: 100vw;
 	}
 	
+	//Arrangement du menu;
 	ul{
 		display:none;
 		width: 400px;
@@ -248,18 +256,16 @@ $epaisseur : 8%;
 	.sub-menu{
 		display: grid;
 	}
+	//Modification du titre
 	.site-branding{
 		
 		font-size: clamp(1vw, 0.5vw + 2vw, 3vw);
 		text-align: center;
 	}
-
+//Arrière-plan du menu
 	nav{
 		background-color: darkblue;
-		a{
-			color: white;
-			
-		}
+	
 	}
 
 }
