--- a/wp-content/themes/theme-tp1 copie/sass/abstracts/mixins/_mixins.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/abstracts/mixins/_mixins.scss
@@ -9,3 +9,8 @@
 @mixin column-width($numberColumns: 3) {
 	width: map-get($columns, $numberColumns) - ( ( $columns__margin * ( $numberColumns - 1 ) ) / $numberColumns );
 }
+//Articles
+@mixin article {
+	margin-left: 2vw;
+	margin-right: 2vw;
+}
