Disposition des articles au centre en mode mobile

--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -216,7 +216,11 @@ $epaisseur : 8%;
 	.fermeX2 {
 		animation : fermeX2 $duree both;
 	}
-
+	.site-main{
+		article{
+			text-align: center;
+		}
+	}
 @media screen and (min-width: 37.5em) {
 //Cacher le bouton burger
 	#burger{
