--- a/wp-content/themes/theme-tp1 copie/style.css
+++ b/wp-content/themes/theme-tp1 copie/style.css
@@ -815,6 +815,10 @@ nav a {
   animation: fermeX2 0.1s both;
 }
 
+.site-main article {
+  text-align: center;
+}
+
 @media screen and (min-width: 37.5em) {
   #burger {
     display: none;
@@ -857,6 +861,7 @@ nav a {
   .site-main article {
     margin-left: 2vw;
     margin-right: 2vw;
+    text-align: left;
   }
 }
 
