--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -9,7 +9,7 @@
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
-
+		background-color: darkblue;
 		ul {
 			//Disposition
 			display: grid;
@@ -19,10 +19,11 @@
 			top: 100%;
 			left: -999em;
 			z-index: 99999;
-			width: auto;
+			width: 100%;
 			height: auto;
 			//Arrière-plan
 			background-color: darkblue;
+			color: white;
 			ul {
 				left: -999em;
 				top: 0;
@@ -41,6 +42,10 @@
 
 			a {
 				width: 200px;
+				color: white;
+				text-decoration: none;
+				//adaptation pour le format mobile
+				display: initial;
 			}
 
 			:hover > a,
@@ -60,6 +65,7 @@
 
 	li {
 		position: relative;
+		text-align: center;
 
 		&:hover > a,
 		&.focus > a {
@@ -70,6 +76,7 @@
 		display: block;
 		//Changement du style du texte des liens
 		text-decoration: none;
+		color: white;
 	}
 
 	.current_page_item > a,
@@ -251,7 +258,7 @@ $epaisseur : 8%;
 		position: static;
 		width: 100vw;
 	}
-	
+
 	//Arrangement du menu;
 	ul{
 		display:none;
@@ -270,6 +277,13 @@ $epaisseur : 8%;
 	nav{
 		background-color: darkblue;
 	
+	}
+//Largeur des sous-menus si en format bureau
+	.main-navigation ul ul {
+		width: auto;
+		a{
+			display: block;
+		}
 	}
 
 	//Ajout d'un mixin
