--- a/wp-content/themes/theme-tp1 copie/style.css
+++ b/wp-content/themes/theme-tp1 copie/style.css
@@ -637,6 +637,7 @@ textarea {
   list-style: none;
   margin: 0;
   padding-left: 0;
+  background-color: darkblue;
 }
 
 .main-navigation ul ul {
@@ -647,9 +648,10 @@ textarea {
   top: 100%;
   left: -999em;
   z-index: 99999;
-  width: auto;
+  width: 100%;
   height: auto;
   background-color: darkblue;
+  color: white;
 }
 
 .main-navigation ul ul ul {
@@ -669,6 +671,9 @@ textarea {
 
 .main-navigation ul ul a {
   width: 200px;
+  color: white;
+  text-decoration: none;
+  display: initial;
 }
 
 .main-navigation ul li:hover > ul,
@@ -678,11 +683,13 @@ textarea {
 
 .main-navigation li {
   position: relative;
+  text-align: center;
 }
 
 .main-navigation a {
   display: block;
   text-decoration: none;
+  color: white;
 }
 
 a {
@@ -857,6 +864,12 @@ nav a {
   }
   nav {
     background-color: darkblue;
+  }
+  .main-navigation ul ul {
+    width: auto;
+  }
+  .main-navigation ul ul a {
+    display: block;
   }
   .site-main article {
     margin-left: 2vw;
