Ajout d'une animation au menu mobile

--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -94,6 +94,15 @@ a{
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
+	animation: leMenu 1s;
+}
+@keyframes leMenu{
+	0%{
+		transform: translateX(-700px);
+	}
+	100%{
+		transform: translateX(0px);
+	}
 }
 
 //Couleur du texte du menu
