--- a/wp-content/themes/theme-tp1 copie/style.css
+++ b/wp-content/themes/theme-tp1 copie/style.css
@@ -700,6 +700,16 @@ a {
 .menu-toggle,
 .main-navigation.toggled ul {
   display: block;
+  animation: leMenu 1s;
+}
+
+@keyframes leMenu {
+  0% {
+    transform: translateX(-700px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
 
 nav a {
