Placement des titres h2 au centre et ajout de bordures aux sections

--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -303,6 +303,14 @@ $epaisseur : 8%;
 		
 	}
 }
+.cours{
+	h2{
+		text-align: center;
+	}
+	section{
+	border-bottom: 1px solid black;
+	}
+}
 
 .comment-navigation,
 .posts-navigation,
