--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -309,6 +309,12 @@ $epaisseur : 8%;
 	}
 	section{
 	border-bottom: 1px solid black;
+	
+		p{
+			margin: 0;
+			line-height: 3em;
+		}
+	
 	}
 }
 
