--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -94,14 +94,27 @@ a{
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
-	animation: leMenu 1s;
+	animation: leMenu both 1s;
 }
+
+
 @keyframes leMenu{
 	0%{
 		transform: translateX(-700px);
 	}
 	100%{
 		transform: translateX(0px);
+	}
+}
+@keyframes leMenu2{
+	0%{
+		transform: translateX(0px);
+		display: block;
+	}
+
+	100%{
+		transform: translateX(-700px);
+		display: none;
 	}
 }
 
@@ -233,6 +246,13 @@ $epaisseur : 8%;
 		animation : fermeX2 $duree both;
 	}
 	.site-main{
+		background-color:lightblue;
+		header{
+			h1{
+				margin-top: 0;
+				margin-left: 2vw;
+			}
+		}
 		article{
 			text-align: center;
 		}
@@ -281,7 +301,12 @@ $epaisseur : 8%;
 		
 		font-size: $font__font-size-site;
 		text-align: center;
-	}
+		a{
+color: darkblue;		}
+:hover{
+	color: blue;
+}	
+}
 //Arrière-plan du menu
 	nav{
 		background-color: darkblue;
