--- a/wp-content/themes/theme-tp1 copie/sass/base/typography/_typography.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/base/typography/_typography.scss
@@ -12,3 +12,5 @@ textarea {
 
 @import "headings";
 @import "copy";
+@import url('https://fonts.googleapis.com/css2?family=Coda:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
