--- a/wp-content/themes/theme-tp1 copie/style.css
+++ b/wp-content/themes/theme-tp1 copie/style.css
@@ -60,6 +60,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css2?family=Coda:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -630,6 +632,7 @@ textarea {
 .main-navigation {
   display: block;
   width: 100%;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .main-navigation ul {
@@ -850,6 +853,7 @@ nav a {
 .site-main header h1 {
   margin-top: 0;
   margin-left: 2vw;
+  color: steelblue;
 }
 
 .site-main article {
@@ -894,6 +898,7 @@ nav a {
   }
   .site-branding a {
     color: darkblue;
+    font-family: 'Coda', cursive;
   }
   .site-branding :hover {
     color: blue;
@@ -1204,7 +1209,7 @@ nav a {
 }
 
 .carrousel div:nth-of-type(5) {
-  background-color: #e5ff00;
+  background-color: #fbff00;
 }
 
 .carrousel div:nth-of-type(5) a {
@@ -1214,30 +1219,40 @@ nav a {
 .carrousel div a {
   font-size: xx-large;
   color: white;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+button {
+  border: none;
 }
 
 #un {
   animation: un 0.5s both;
+  background-color: #be4343;
 }
 
 #deux {
   animation: deux 0.5s both;
   animation-delay: 0.25s;
+  background-color: #4dbe43;
 }
 
 #trois {
   animation: trois 0.5s both;
   animation-delay: 0.5s;
+  background-color: #435abe;
 }
 
 #quatre {
   animation: quatre 0.5s both;
   animation-delay: 0.75s;
+  background-color: #ff009d;
 }
 
 #cinq {
   animation: cinq 0.5s both;
   animation-delay: 1s;
+  background-color: #fbff00;
 }
 
 @keyframes un {
