--- a/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
@@ -53,7 +53,8 @@ button{
 #trois{
     animation: trois 0.5s both;
     animation-delay: 0.5s;
-    background-color: rgb(67, 90, 190);            
+    background-color: rgb(67, 90, 190);  
+    color: white;          
 }
 #quatre{
     animation: quatre 0.5s both;
