Ajout de commentaires et d'un media query, et suppression d'un thème

--- a/wp-content/themes/theme-tp1 copie/sass/base/elements/_body.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/base/elements/_body.scss
@@ -3,3 +3,9 @@ body {
 	//Cacher le défilement horizontal
 	overflow-x: hidden;
 }
+//Empêcher le défilement en mode tablette
+@media screen and (max-width:768px){
+	body{
+	overflow-x: hidden;
+	}
+}
