--- a/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/local/_carrousel.scss
@@ -9,7 +9,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-       
+       //arrières-plans
         &:nth-of-type(1){
             background-color: rgb(190, 67, 67);
            
