--- a/wp-content/themes/theme-tp1 copie/sass/base/typography/_typography.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/base/typography/_typography.scss
@@ -12,5 +12,6 @@ textarea {
 
 @import "headings";
 @import "copy";
+//Ajout de liens pour les polices
 @import url('https://fonts.googleapis.com/css2?family=Coda:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
