--- a/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/theme-tp1 copie/sass/components/navigation/_navigation.scss
@@ -11,6 +11,7 @@
 		margin: 0;
 		padding-left: 0;
 		background-color: darkblue;
+
 		ul {
 			//Disposition
 			display: grid;
@@ -25,6 +26,7 @@
 			//Arrière-plan
 			background-color: darkblue;
 			color: white;
+
 			ul {
 				left: -999em;
 				top: 0;
@@ -34,8 +36,8 @@
 				//Séparateurs
 				border-bottom: 1px solid white;
 
-				&:hover > ul,
-				&.focus > ul {
+				&:hover>ul,
+				&.focus>ul {
 					display: block;
 					left: auto;
 				}
@@ -49,17 +51,15 @@
 				display: initial;
 			}
 
-			:hover > a,
-			.focus > a {
-			}
+			:hover>a,
+			.focus>a {}
 
 			a:hover,
-			a.focus {
-			}
+			a.focus {}
 		}
 
-		li:hover > ul,
-		li.focus > ul {
+		li:hover>ul,
+		li.focus>ul {
 			left: auto;
 		}
 	}
@@ -68,9 +68,8 @@
 		position: relative;
 		text-align: center;
 
-		&:hover > a,
-		&.focus > a {
-		}
+		&:hover>a,
+		&.focus>a {}
 	}
 
 	a {
@@ -80,14 +79,14 @@
 		color: white;
 	}
 
-	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a,
-	.current-menu-ancestor > a {
-	}
+	.current_page_item>a,
+	.current-menu-item>a,
+	.current_page_ancestor>a,
+	.current-menu-ancestor>a {}
 }
+
 //Enlèvement de la décoration des liens
-a{
+a {
 	text-decoration: none;
 }
 
@@ -95,33 +94,36 @@ a{
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
+	//Animation
 	animation: leMenu both 1s;
 }
 
-
-@keyframes leMenu{
-	0%{
+//Animations
+@keyframes leMenu {
+	0% {
 		transform: translateX(-700px);
 	}
-	100%{
+
+	100% {
 		transform: translateX(0px);
 	}
 }
-@keyframes leMenu2{
-	0%{
+
+@keyframes leMenu2 {
+	0% {
 		transform: translateX(0px);
 		display: block;
 	}
 
-	100%{
+	100% {
 		transform: translateX(-700px);
 		display: none;
 	}
 }
 
 //Couleur du texte du menu
-nav{
-	a{
+nav {
+	a {
 		color: white;
 	}
 }
@@ -133,153 +135,177 @@ $epaisseur : 8%;
 
 
 
-	#burger {
-		position : relative;
-		width:$largeur-burger ;
-		height : $largeur-burger ;
-		// border : 1px solid #aaa;
-		//border-radius : 50%;
-		overflow: hidden;
-		background: none;
-		border:none;
-	
-		div{
-			top: 0;
-			left : 0;
-			position:absolute;
-			width : 100%;
-			height : 100%;
-		
-			&:nth-of-type(1){
-				background-color: black;
-				clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
-			}
-			&:nth-of-type(2){
-				background-color: black;
-				clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
-			}
-			&:nth-of-type(3){
-				background-color: black;
-				clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
-			}
-		}
-	}
+#burger {
+	position: relative;
+	width: $largeur-burger;
+	height: $largeur-burger;
+	// border : 1px solid #aaa;
+	//border-radius : 50%;
+	overflow: hidden;
+	background: none;
+	border: none;
 
+	div {
+		top: 0;
+		left: 0;
+		position: absolute;
+		width: 100%;
+		height: 100%;
 
-	@keyframes ouvreX1{
-		0%{
+		&:nth-of-type(1) {
+			background-color: black;
 			clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
 		}
-		100%{
-			clip-path: polygon($epaisseur  (-$epaisseur),  100%+$epaisseur 100%-$epaisseur ,100%-$epaisseur 100%+$epaisseur, -$epaisseur $epaisseur);
+
+		&:nth-of-type(2) {
+			background-color: black;
+			clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
+		}
+
+		&:nth-of-type(3) {
+			background-color: black;
+			clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
 		}
 	}
-	@keyframes fermeX1{
-		0%{
-			clip-path: polygon($epaisseur  (-$epaisseur),  100%+$epaisseur 100%-$epaisseur ,100%-$epaisseur 100%+$epaisseur, -$epaisseur $epaisseur);
-		}
-		100%{
-			 clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
-		}
+}
+
+
+@keyframes ouvreX1 {
+	0% {
+		clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
 	}
-	
-	.ouvreX1 {
-		animation : ouvreX1 $duree both;
+
+	100% {
+		clip-path: polygon($epaisseur (-$epaisseur), 100%+$epaisseur 100%-$epaisseur, 100%-$epaisseur 100%+$epaisseur, -$epaisseur $epaisseur);
 	}
-	
-	.fermeX1 {
-		animation : fermeX1 $duree both;
+}
+
+@keyframes fermeX1 {
+	0% {
+		clip-path: polygon($epaisseur (-$epaisseur), 100%+$epaisseur 100%-$epaisseur, 100%-$epaisseur 100%+$epaisseur, -$epaisseur $epaisseur);
 	}
-	
-	/* -----------------------------------------------------------------------------------
+
+	100% {
+		clip-path: polygon(0 20%, 100% 20%, 100% 30%, 0 30%);
+	}
+}
+
+.ouvreX1 {
+	animation: ouvreX1 $duree both;
+}
+
+.fermeX1 {
+	animation: fermeX1 $duree both;
+}
+
+/* -----------------------------------------------------------------------------------
 	La barre du bas
 	-------------------------------------------------------------------------------------- */
-	@keyframes ouvreX3{
-		0%{
-			clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
-		}
-		100%{
-			clip-path: polygon( (-$epaisseur)  100%-$epaisseur,  100%-$epaisseur (-$epaisseur) , 100%+$epaisseur $epaisseur, $epaisseur 100%+$epaisseur);
-		}
+@keyframes ouvreX3 {
+	0% {
+		clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
 	}
-	@keyframes fermeX3{
-		0%{
-			clip-path: polygon(-4%  96%,  96% -4% , 104% 4%, 4% 104%);
-		}
-		100%{
-			clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
-		}
+
+	100% {
+		clip-path: polygon((-$epaisseur) 100%-$epaisseur, 100%-$epaisseur (-$epaisseur), 100%+$epaisseur $epaisseur, $epaisseur 100%+$epaisseur);
 	}
-	
-	.ouvreX3 {
-		animation : ouvreX3 $duree both;
+}
+
+@keyframes fermeX3 {
+	0% {
+		clip-path: polygon(-4% 96%, 96% -4%, 104% 4%, 4% 104%);
 	}
-	
-	.fermeX3 {
-		animation : fermeX3 $duree both;
+
+	100% {
+		clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
 	}
-	
-	/* -----------------------------------------------------------------------------------
+}
+
+.ouvreX3 {
+	animation: ouvreX3 $duree both;
+}
+
+.fermeX3 {
+	animation: fermeX3 $duree both;
+}
+
+/* -----------------------------------------------------------------------------------
 	La barre du millieu
 	-------------------------------------------------------------------------------------- */
-	@keyframes ouvreX2{
-		0%{
-			clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
-		}
-		100%{
-			clip-path: polygon(48%  48%,  52% 48% , 52% 52%, 48% 52%);
+@keyframes ouvreX2 {
+	0% {
+		clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
+	}
+
+	100% {
+		clip-path: polygon(48% 48%, 52% 48%, 52% 52%, 48% 52%);
+	}
+}
+
+@keyframes fermeX2 {
+	0% {
+		clip-path: polygon(48% 48%, 52% 48%, 52% 52%, 48% 52%);
+	}
+
+	100% {
+		clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
+	}
+}
+
+.ouvreX2 {
+	animation: ouvreX2 $duree both;
+}
+
+.fermeX2 {
+	animation: fermeX2 $duree both;
+}
+
+//Main
+.site-main {
+	background-color: lightblue;
+
+	header {
+
+		//Archives
+		h1 {
+			margin-top: 0;
+			margin-left: 2vw;
+			color: steelblue;
 		}
 	}
-	@keyframes fermeX2{
-		0%{
-			clip-path: polygon(48%  48%,  52% 48% , 52% 52%, 48% 52%);
-		}
-		100%{
-			clip-path: polygon(0 45%, 100% 45%, 100% 55%, 0 55%);
-		}
+
+	//Placemnt au centre sur mobile
+	article {
+		text-align: center;
 	}
-	
-	.ouvreX2 {
-		animation : ouvreX2 $duree both;
-	}
-	
-	.fermeX2 {
-		animation : fermeX2 $duree both;
-	}
-	.site-main{
-		background-color:lightblue;
-		header{
-			h1{
-				margin-top: 0;
-				margin-left: 2vw;
-				color: steelblue;
-			}
-		}
-		article{
-			text-align: center;
-		}
-	}
+}
+
+//Mode bureau
 @media screen and (min-width: 37.5em) {
-//Cacher le bouton burger
-	#burger{
+
+	//Cacher le bouton burger
+	#burger {
 		display: none;
 	}
 
 	.menu-toggle {
 		display: none;
 	}
-//Taille des sous-menus
-	li:hover ul{
+
+	//Taille des sous-menus
+	li:hover ul {
 		display: block;
 		width: auto;
 		height: auto;
 	}
-//Disposition de la navigation
-	.main-navigation a{
+
+	//Disposition de la navigation
+	.main-navigation a {
 		display: block;
 		color: white;
 	}
-//Alignement des liens
+
+	//Alignement des liens
 	.main-navigation.toggled ul,
 	.main-navigation ul {
 		display: flex;
@@ -291,70 +317,85 @@ $epaisseur : 8%;
 	}
 
 	//Arrangement du menu;
-	ul{
-		display:none;
+	ul {
+		display: none;
 		width: 400px;
 	}
-	.sub-menu{
+
+	.sub-menu {
 		display: grid;
 	}
+
 	//Modification du titre
-	.site-branding{
-		
+	.site-branding {
+
 		font-size: $font__font-size-site;
 		text-align: center;
-		a{
-color: darkblue;		
-font-family: 'Coda', cursive;
-}
-:hover{
-	color: blue;
-}	
-}
-//Arrière-plan du menu
-	nav{
-		background-color: darkblue;
-	
+
+		//Modification des liens
+		a {
+			color: darkblue;
+			font-family: 'Coda', cursive;
+		}
+
+		:hover {
+			color: blue;
+		}
 	}
-//Largeur des sous-menus si en format bureau
+
+	//Arrière-plan du menu
+	nav {
+		background-color: darkblue;
+
+	}
+
+	//Largeur des sous-menus si en format bureau
 	.main-navigation ul ul {
 		width: auto;
-		a{
+
+		a {
 			display: block;
 		}
 	}
 
 	//Ajout d'un mixin
-	.site-main{
-		article{
+	.site-main {
+		article {
 			@include article;
 		}
-		
+
 	}
 }
+
+
 //Sections
-.cours{
-	h2{
+.cours {
+	h2 {
 		text-align: center;
 	}
-	section{
-	border-bottom: 1px solid black;
-	
-		p{
+
+	section {
+		border-bottom: 1px solid black;
+
+		p {
 			margin: 0;
 			line-height: 3em;
 		}
-	
+
 	}
 }
-footer{
+
+//Pied-de-page
+footer {
 	background-color: lightblue;
 	padding-top: 2em;
 	padding-bottom: 2em;
-	p{
-		margin:0
+
+	p {
+		margin: 0
 	}
 }
+
 .comment-navigation,
 .posts-navigation,
 .post-navigation {
